src/assets/scss/index.scss
@use 'sass:math';
@import "fonts";

html {
  overflow: hidden;
}

body {
  --max-width: 600px;
  --color-accent: #9a7a25;
  --color-hover: #ffdf30;
  --color-white: #ffffff;
  --color-black: #000000;
  --color-success: #74b750;
  --color-failure: #bd1a1a;
  --normal-font-size: min(44px, 10vh);
  all: unset;
  display: block;
  background: var(--color-black);
  width: 100vw;
  height: 100dvh;
  color: var(--color-white);
  font-family: 'Pixel Cowboy', sans-serif;
  user-select: none;
  overflow: hidden;

  &:before {
    position: absolute;
    width: 0;
    height: 0;
    overflow: hidden;
    z-index: -1;
    content: url("../img/btn.png") url("../img/btn-focus.png") url("../img/city-1-0.png") url("../img/city-1-1.png") url("../img/city-1-2.png") url("../img/city-2-0.png") url("../img/city-2-1.png") url("../img/city-2-2.png") url("../img/city-3-0.png") url("../img/city-3-1.png") url("../img/city-3-2.png") url("../img/city-4-0.png") url("../img/city-4-1.png") url("../img/city-4-2.png") url("../img/city-icon-1.png") url("../img/city-icon-1-locked.png") url("../img/city-icon-2.png") url("../img/city-icon-2-locked.png") url("../img/city-icon-3.png") url("../img/city-icon-3-locked.png") url("../img/city-icon-4.png") url("../img/city-icon-4-locked.png") url("../img/padlock.png")
  }

  * {
    box-sizing: border-box;

    &:focus,
    &:focus-visible {
      outline: none;
    }
  }

  .background {
    position: absolute;
    top: 0;
    left: 0;
    width: 100%;
    height: 100%;
    overflow: hidden;

    [data-layer] {
      --bg-height: 100dvh;
      --bg-anim-duration: 60s;
      position: absolute;
      top: 0;
      left: 0;
      height: var(--bg-height);
      width: calc(var(--bg-height) * 8 * 1920 / 1080);
      background: top left repeat-x;
      background-size: auto 100%;
      animation: bg-anim var(--bg-anim-duration) linear infinite;

      @keyframes bg-anim {
        0% {
          transform: translateX(0);
        }
        100% {
          transform: translateX(-12.5%);
        }
      }

      @media screen and (max-width: 600px) {
        --bg-height: 70dvh;
      }
    }
  }

  @for $bg from 1 through 4 {
    @for $layer from 0 through 2 {
      .background[data-bg="bg#{$bg}"] [data-layer="#{$layer}"] {
        background-image: url('../img/city-#{$bg}-#{$layer}.png');
        --bg-anim-duration: #{((3 - $layer) * 60)}s;
      }
    }
  }

  @mixin nineSliceBg($src, $border, $fallback-bg: true) {
    position: absolute;
    top: 0;
    left: 0;
    right: 0;
    bottom: 0;
    @if ($fallback-bg) {
      background: url($src) no-repeat;
      background-size: 100% 100%;
    }
    border-width: #{$border}px;
    border-style: solid;
    border-image-source: url($src);
    border-image-slice: $border fill;
  }

  .button-bg {
    @include nineSliceBg('../img/btn.png', 4);
  }

  @mixin font-shadow($width: 4px) {
    --c: #27231f;
    --s: #{$width};
    ---s: -#{$width};
    text-shadow: var(--c) var(--s) var(--s),
    var(--c) var(---s) var(---s),
    var(--c) var(--s) var(---s),
    var(--c) var(---s) var(--s);
  }

  main {
    max-width: var(--max-width);
    display: flex;
    flex-flow: column nowrap;
    margin: 0 auto;
    width: 100%;
    height: 100%;
    position: relative;

    button {
      all: unset;
      position: relative;
      font-size: var(--normal-font-size);
      min-width: calc(var(--normal-font-size) + 0.5em);
      padding: 0.2em 0.4em;
      line-height: 1;
      color: var(--color-accent);
      fill: var(--color-accent);
      cursor: pointer;
      transition: color 0.2s ease;
      display: block;
      box-sizing: border-box;

      .text {
        position: relative;
        display: block;
        text-align: center;

        svg {
          width: auto;
          height: min(31px, 7vh);
          display: block;
          margin-bottom: -0.03em;
        }
      }

      @media (hover: hover) {
        &:hover {
          color: var(--color-hover) !important;
          fill: var(--color-hover) !important;
        }
      }
    }

    button,
    a {
      position: relative;

      &:focus-visible:after {
        content: '';
        @include nineSliceBg('../img/btn-focus.png', 12, false);
        transform-origin: center;
        animation: focus-rect-anim 1s ease-in-out infinite;

        @keyframes focus-rect-anim {
          0% {
            transform: scale(1);
          }
          50% {
            transform: scale(0.9);
          }
          100% {
            transform: scale(1);
          }
        }
      }
    }

    a {
      &:focus-visible:after {
        top: -8%;
        left: -8%;
        right: -8%;
        bottom: -30%;
      }
    }

    .game {
      flex: 0 0 60%;
      height: 60%;
      display: flex;
      flex-flow: column nowrap;
      justify-content: flex-end;
      position: relative;

      .equation {
        font-size: min(90px, calc(100vw / 6.66));
        display: flex;
        flex-flow: row nowrap;
        line-height: 1;
        align-items: center;
        justify-content: center;
        margin-bottom: 1em;
        color: var(--color-white);
        @include font-shadow();

        &.win,
        &.lose {
          --s: 2px;
          ---s: -2px;
          font-size: var(--normal-font-size);
        }

        &.win {
          color: var(--color-success);
        }

        &.lose {
          color: var(--color-failure);
        }

        span {
          display: block;
        }

        > .input {
          position: relative;

          .value {
            opacity: 0;
          }

          .input {
            position: absolute;
            top: 0;
            right: 0;
          }

          &:last-child .input {
            left: 0;
            right: unset;
          }
        }

        &.lose > .input {
          .input {
            text-decoration: underline;
          }
        }
      }
    }

    .keyboard {
      flex: 0 0 40%;
      height: 40%;
      table-layout: fixed;
      border-collapse: collapse;

      td {
        text-align: center;
        vertical-align: middle;
        width: 33.33%;
        height: 25%;
        position: relative;

        button {
          position: absolute;
          top: 0;
          left: 0;
          right: 0;
          bottom: 0;
          font-size: min(55px, 10vh);
          line-height: 0;
        }

        &.code--1 button {
          color: var(--color-failure);
        }

        &.code--2 button {
          color: var(--color-success);
        }
      }
    }

    @media screen and (max-height: 600px) {
      .game {
        flex: 0 0 40%;
        height: 40%;

        .equation {
          margin-bottom: 0.2em;
        }
      }
      .keyboard {
        flex: 0 0 60%;
        height: 60%;
      }
    }

    .score {
      position: absolute;
      top: 0;
      left: 0;
      z-index: 1;

      .increment,
      button {
        .sign {
          font-family: 'Eyvindr', sans-serif;
        }
      }

      &.negative button,
      .increment.negative {
        color: var(--color-failure);
      }

      .increment.positive {
        color: var(--color-success);
      }

      .increment {
        position: absolute;
        display: none;
        top: 0;
        left: 0;
        min-width: 100%;
        text-align: right;
        padding: 0.2em 0.4em;
        line-height: 1;
        font-size: var(--normal-font-size);

        .bg {
          content: "";
          @include nineSliceBg("../img/btn.png", 4);
        }

        .text {
          position: relative;
        }

        &.visible {
          display: block;
        }
      }
    }

    .inventory {
      --width: min(120px, 20vh);
      list-style: none;
      margin: 0;
      padding: 0;
      position: absolute;
      left: 0;
      top: 100%;
      display: flex;
      flex-flow: row wrap;
      width: calc(2 * var(--width));

      &:not(.open) {
        display: none;
      }

      li {
        display: block;
        margin: 0;
        padding: 0;
        width: var(--width);
        height: calc(var(--width) * 1.1);
        position: relative;

        button,
        button .text {
          position: absolute;
          top: 0;
          left: 0;
          right: 0;
          bottom: 0;
        }

        .icon {
          position: absolute;
          top: 4px;
          left: 4px;
          right: 4px;
          bottom: 4px;
          background-size: cover;
          background-position: center;
          background-repeat: no-repeat;
        }

        .price {
          position: absolute;
          bottom: 5%;
          left: 0;
          width: 100%;
          color: var(--color-white);
          text-align: center;
          font-size: calc(var(--width) * 0.3);
          @include font-shadow(2px);
        }

        .padlock {
          position: absolute;
          top: 0;
          left: 0;
          width: 100%;
          height: 100%;
          background: url("../img/padlock.png") top 30% center no-repeat;
          background-size: 40% auto;
        }

        @for $i from 1 through 4 {
          &[data-item="#{$i}"] .icon {
            background-image: url('../img/city-icon-#{$i}.png');
          }
          &.locked[data-item="#{$i}"] .icon {
            background-image: url('../img/city-icon-#{$i}-locked.png');
          }
        }
      }
    }

    .controls {
      position: absolute;
      top: 0;
      right: 0;
      display: flex;
      flex-flow: row nowrap;
      z-index: 1;

      .button-help {
        padding-right: 0.3em;
      }
    }

    dialog.help {
      all: unset;
      box-sizing: border-box;
      position: fixed;
      top: 0;
      left: 0;
      width: 100%;
      height: 100%;
      font-size: min(5vw, 32px);
      color: var(--color-accent);
      padding: 4px;
      display: flex;
      justify-content: stretch;
      align-items: stretch;
      border: none;
      background: none;

      &:not([open]) {
        display: none;
      }

      .scroll {
        display: flex;
        flex-flow: row wrap;
        align-items: flex-start;
        align-content: flex-start;
        justify-content: center;
        position: relative;
        overflow: auto;
        padding: 0 0 1em;

        p {
          flex: 0 0 100%;
          text-align: center;
          margin: 1em 0;

          a {
            color: inherit;
            text-decoration: underline;

            &:hover {
              color: var(--color-hover);
            }
          }
        }
      }

      .button-close {
        position: absolute;
        top: 0;
        right: 0;
      }

      ul {
        position: relative;
        display: block;
        list-style: none;
        margin: 0;
        padding: 1em 1em 0;

        li {
          position: relative;
          margin: 0;
          padding: 0;
          display: block;
          min-width: min(30vw, 200px);
        }
      }
    }
  }
}

